--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,6 @@ minecraft_version=1.14.4
 jar_name=Block-Snorter
 forge_version=1.14.4-28.2.23
 mappings_version=56-1.14.3
+# Deps
+cct_version=1.89.2
+tm_tag=1.3.1-Release
