--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,33 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-# Mod Meta
-mod_version=0.1
-minecraft_version=1.14.4
+
 # Building
 jar_name=Block-Snorter
-forge_version=1.14.4-28.2.23
-mappings_version=56-1.14.3
-# Deps
-cct_version=1.89.2
-tm_tag=1.3.1-Release
+minecraft_version=1.16.5
+forge_version=1.16.5-36.2.34
+mixin_version=0.8.2
+mappings_version=1.16.5
+mappings_channel=official
+
+#Mod Information
+mod_id=block_snorter
+mod_name=Block Snorter
+mod_version=0.0.2
+mod_base_package=me.soapsuds.block_snorter
+mod_authors=50ap5ud5
+credits=LilithMotherOfAll
+mod_description=Minecraft Server Auditing tool.
+display_url=https://github.com/50ap5ud5/BlockSnorter
+logo_file=logo.png
+issue_tracker_url=https://github.com/50ap5ud5/BlockSnorter/issues
+license=https://github.com/50ap5ud5/BlockSnorter/blob/1.16.x/LICENSE
+update_json_url=""
+#This determines the minimum version of forge required for users to run Tardis Mod
+forge_version_range=[36.2.20,)
+minecraft_version_range=[1.16.5]
+loader_version_range=[36,)
+
+# Dependencies
+#jei_version=1.16.5:7.7.1.137
+configured_version=3546348
